# desafio-erad-sp-2018

./: .gitignore  CMakeLists.txt  README.md
A/: CMakeLists.txt  Makefile  in.1  in.2
B/: B  CMakeLists.txt  Makefile  in.2  soma.c
